--- a/JS rock-paper-scissors.html
+++ b/JS rock-paper-scissors.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" href="/home/rice/the_odin_project/RPS/style.css"/>
+    <link rel="stylesheet" href="/home/rice/the_odin_project/RPS/style.css" />
 </head>
 
 <body>
@@ -12,21 +12,23 @@
     <h2>Mortal vs Machine</h2>
 
     <p>What will it be? Your choice, human.</p>
+    <p><span id="humanPlay"></span></p>
+    <p><span id="computerPlay"></span></p>
+    <p><span id="result"></span></p>
 
     <form>
         <label>
-            <input value="rock" type="radio" name="choice">
-            <img src="/home/rice/the_odin_project/RPS/rock.jpg">
+            <input onclick="humanPlay('rock')" value="rock" type="radio" name="choice">
+            <img src="https://unsplash.com/photos/t1XLQvDqt_4">
         </label>
 
         <label>
-            <input value="paper" type="radio" name="choice">
+            <input onclick="humanPlay('paper')" value="paper" type="radio" name="choice">
             <img src="/home/rice/the_odin_project/RPS/paper.jpg">
         </label>
-        
-        
+
         <label>
-            <input value="scissors" type="radio" name="choice">
+            <input onclick="humanPlay('scissors')" value="scissors" type="radio" name="choice">
             <img src="/home/rice/the_odin_project/RPS/Forbici_da_occhielli.jpg">
         </label>
     </form>
@@ -41,13 +43,13 @@
         function computerPlay(hand) {
             return hand[Math.floor(Math.random() * hand.length)];
         }
-            //source of randomizing code from array
-            //https://timonweb.com/tutorials/how-to-get-a-random-value-from-a-javascript-array/
+        //source of randomizing code from array
+        //https://timonweb.com/tutorials/how-to-get-a-random-value-from-a-javascript-array/
 
         function humanPlay() {
             let humanChoice = document.querySelector("input[name='choice']:checked").value;
 
-            return(humanChoice);
+            return (humanChoice);
         }
 
         function playRound() {
@@ -55,18 +57,18 @@
             let playerSelection = humanPlay();
             let computerSelection = computerPlay(hand);
 
-            if ((playerSelection=='rock' && computerSelection=='scissors') ||
-            (playerSelection=='scissors' && computerSelection=='paper') ||
-            (playerSelection=='paper' && computerSelection=='rock')) {
-                return(playerSelection + " vs " + computerSelection + ": the human wins.")
+            if ((playerSelection == 'rock' && computerSelection == 'scissors') ||
+                (playerSelection == 'scissors' && computerSelection == 'paper') ||
+                (playerSelection == 'paper' && computerSelection == 'rock')) {
+                return (playerSelection + " vs " + computerSelection + ": the human wins.")
             }
 
-           else if (playerSelection == computerSelection) {
-               return(playerSelection + " vs " + computerSelection + ": it's a tie.")
-           }
+            else if (playerSelection == computerSelection) {
+                return (playerSelection + " vs " + computerSelection + ": it's a tie.")
+            }
 
             else {
-                return(playerSelection + " vs " + computerSelection + ": the computer wins.")
+                return (playerSelection + " vs " + computerSelection + ": the computer wins.")
             }
         }
 
